--- a/squelettes/inclure/prix.html
+++ b/squelettes/inclure/prix.html
@@ -1,5 +1,5 @@
 #SET{utilises,#ARRAY}
-<BOUCLE_objets(SELECTION_OBJETS){id_objet_dest=#ENV{id_article_base}}{objet_dest=#ENV{objet}}{type_lien=compris_pack}{par ordre}>
+<BOUCLE_objets(SELECTION_OBJETS){id_objet_dest=#ENV{id_article_base}}{objet_dest=#ENV{objet}}{type_lien IN compris_pack,pack_base}{par ordre}>
 #SET{utilises,#GET{utilises}|push{#ID_OBJET}}
 </BOUCLE_objets>
 
