--- a/squelettes/content/article-packs.html
+++ b/squelettes/content/article-packs.html
@@ -14,12 +14,16 @@
 			[(#LOGO_ARTICLE|image_reduire{200,200})]
 			(#TEXTE|image_reduire{500,0})</section>
 		]
-	<section class="options_packs">
-	    <INCLURE{fond=inclure/options,id_objet_dest=#ID_ARTICLE,objet_dest=article,url=#URL_ARTICLE,env,ajax}/>
-	</section>
 	[<section class="#EDIT{hyperlien} hyperlien"><:voir_en_ligne:> : <a href="(#URL_SITE)" class="spip_out">[(#NOM_SITE|sinon{[(#URL_SITE|couper{80})]})]</a></section>]
 	[<section class="#EDIT{ps} ps surlignable"><h2><:info_ps:></h2>(#PS|image_reduire{500,0})</section>]
 
+    <section class="options_packs">
+        <INCLURE{fond=inclure/options,id_objet_dest=#ID_ARTICLE,objet_dest=article,url=#URL_ARTICLE,env,ajax}/>
+     
+     <BOUCLE_fonctionnalits(RUBRIQUES){id_trad=7}{lang}>
+        <a href="#URL_RUBRIQUE" title="#TITRE"><:websimple:ajouter_fonctionnalites:></a>
+     </BOUCLE_fonctionnalits>
+    </section>
 	[(#REM) Gestion du portfolio et des documents ]
 	[(#INCLURE{fond=inclure/documents,id_article})]
 	
