--- a/squelettes/content/article-packs.html
+++ b/squelettes/content/article-packs.html
@@ -21,7 +21,7 @@
         <INCLURE{fond=inclure/options,id_objet_dest=#ID_ARTICLE,objet_dest=article,url=#URL_ARTICLE,env,ajax}/>
      
      <BOUCLE_fonctionnalits(RUBRIQUES){id_trad=7}{lang}>
-        <a href="#URL_RUBRIQUE" title="#TITRE"><:websimple:ajouter_fonctionnalites:></a>
+        <a class="h2" href="#URL_RUBRIQUE" title="#TITRE"><:websimple:ajouter_fonctionnalites:></a>
      </BOUCLE_fonctionnalits>
     </section>
 	[(#REM) Gestion du portfolio et des documents ]
