--- a/squelettes/rubrique.html
+++ b/squelettes/rubrique.html
@@ -2,3 +2,7 @@
 	[(#COMPOSITION|=={home}|oui)#SET{class,home}]
 	<INCLURE{fond=structure,env,id_secteur=#ID_SECTEUR,type-page=rubrique,composition=#COMPOSITION,id_trad,class=#GET{class},id=#ID_RUBRIQUE}/>
 </BOUCLE_principale_rubrique>
+[(#ID_RUBRIQUE|AccesRestreint_rubrique_restreinte|oui)
+    <INCLURE{fond=login,url=#SELF}/>
+ ] 
+<//B_principale_rubrique>
