ne pas afficher dans la rubrique fonctionnalités

--- a/squelettes/content/article-packs.html
+++ b/squelettes/content/article-packs.html
@@ -20,7 +20,7 @@
     <section class="options_packs">
         <INCLURE{fond=inclure/options,id_objet_dest=#ID_ARTICLE,objet_dest=article,url=#URL_ARTICLE,env,ajax}/>
      
-     <BOUCLE_fonctionnalits(RUBRIQUES){id_trad=7}{lang}>
+     <BOUCLE_fonctionnalits(RUBRIQUES){id_rubrique!=#ID_RUBRIQUE}{id_trad=7}{lang}>
         <a class="h2" href="#URL_RUBRIQUE" title="#TITRE"><:websimple:ajouter_fonctionnalites:></a>
      </BOUCLE_fonctionnalits>
     </section>
