limiter affichaer et affichage conditionnel

--- a/squelettes/inclure/contenu_lie.html
+++ b/squelettes/inclure/contenu_lie.html
@@ -1,8 +1,9 @@
+<B_sites_lies>
 <section class="contenu_lie[ (#ENV{class})]">
     [<h2>(#TYPE_LIEN|oui)[(#VAL{websimple:#TYPE_LIEN|concat{s}}|_T)]</h2>]
     <ul>
         
-    <BOUCLE_sites_lies(SELECTION_OBJETS){objet_dest}{id_objet_dest}{type_lien ?}{par ordre}>
+    <BOUCLE_sites_lies(SELECTION_OBJETS){objet_dest}{id_objet_dest}{type_lien ?}{par ordre}{0,5}>
     [<li>(#ID_OBJET|generer_modele{#OBJET,modeles_so/contenu_lie,#ARRAY{
         ordre,#ORDRE,
         id_selection_objet,#ID_SELECTION_OBJET,
@@ -19,3 +20,4 @@
     </BOUCLE_sites_lies>
     </ul>
 </section>
+</B_sites_lies>
