--- a/squelettes/modeles_so/contenu_lie.html
+++ b/squelettes/modeles_so/contenu_lie.html
@@ -1,1 +1,1 @@
-<a href="[(#URL|sinon{#ID_OBJET|generer_url_entite{#OBJET}})]" title="[(#TITRE|couper{80})]">#TITRE</a>
+<a href="[(#URL|sinon{#ID_OBJET|generer_url_entite{#OBJET}})]" title="[(#TITRE|textebrut)]">[(#TITRE|couper{40})]</a>
