--- a/squelettes/inclure/contenu_lie.html
+++ b/squelettes/inclure/contenu_lie.html
@@ -1,6 +1,6 @@
 <B_sites_lies>
 <section class="contenu_lie[ (#ENV{class})]">
-    [<h2>(#TYPE_LIEN|oui)[(#VAL{websimple:#TYPE_LIEN|concat{s}}|_T)]</h2>]
+    [<h2>(#TYPE_LIEN|oui)<h2>[(#GRAND_TOTAL|singulier_ou_pluriel{#TYPE_LIEN|nom_type{#OBJET_DEST},#VAL{websimple:[(#TYPE_LIEN|concat{s})]}|_T})]</h2>]
     <ul>
         
     <BOUCLE_sites_lies(SELECTION_OBJETS){objet_dest}{id_objet_dest}{type_lien ?}{par ordre}{0,5}>
