--- a/squelettes/inclure/contenu_lie_a.html
+++ b/squelettes/inclure/contenu_lie_a.html
@@ -1,12 +1,8 @@
 <B_sites_lies>
 <section class="contenu_lie[ (#ENV{class})]">
-
-    #SET{pluriel,websimple:(#TYPE_LIEN|concat{s})}
-
     <h2><:websimple:site_utilise:></h2>
     <ul>
-        
-    <BOUCLE_sites_lies(SELECTION_OBJETS){objet}{id_objet}{type_lien ?}{!par ordre}>
+    <BOUCLE_sites_lies(SELECTION_OBJETS){objet}{id_objet}{type_lien ?}{!par ordre,titre}>
     [<li[(#COMPTEUR_BOUCLE|=={1}|oui) class="first"]>(#ID_OBJET|generer_modele{#OBJET,modeles_so/contenu_lie_a,#ARRAY{
         ordre,#ORDRE,
         id_selection_objet,#ID_SELECTION_OBJET,
