--- a/squelettes/modeles_so/contenu_lie_a.html
+++ b/squelettes/modeles_so/contenu_lie_a.html
@@ -1,2 +1,2 @@
-#SET{titre,(#OBJET_DEST|info_objet{#ID_OBJET_DEST,titre}|couper{40})}
-<a href="[(#URL|sinon{#ID_OBJET_DEST|generer_url_entite{#OBJET_DEST}})]" title="[(#GET{titre}|textebrut)]">[(#GET{titre}|couper{40})]</a>
+#SET{titre,(#OBJET_DEST|info_objet{#ID_OBJET_DEST,titre})}
+<a href="[(#URL|sinon{#ID_OBJET_DEST|generer_url_entite{#OBJET_DEST}})]" title="[(#GET{titre}|textebrut)]">[(#GET{titre}|couper{60})]</a>
