--- a/squelettes/inclure/objet_precieux_article.html
+++ b/squelettes/inclure/objet_precieux_article.html
@@ -10,7 +10,7 @@
             <:websimple:compris_pack:>
             ,
             <dd class="ajouter_au_panier">
-            #SET{retour,#URL_ACTION_AUTEUR{charger_squelette,-}|parametre_url{squelette,inclure/ajaxreload}}
+            #SET{retour,#SELF|parametre_url{retour,ok}}
             [(#BOUTON_ACTION{<:websimple:action_ajouter:>,#URL_ACTION_AUTEUR{remplir_panier,prix_objet-#ID_PRIX_OBJET,#GET{retour}},ajax})] 
             })]
 
@@ -19,3 +19,10 @@
 </dl>
 </BOUCLE_art>
 </B_art>
+[(#ENV{retour}|oui)
+<script type="text/javascript">
+    jQuery(document).ready(function(){
+        ajaxReload('mon_panier', { });
+        });      
+</script>
+]
