--- a/squelettes/inclure/contenu_lie_a.html
+++ b/squelettes/inclure/contenu_lie_a.html
@@ -3,7 +3,7 @@
     <h2><:websimple:site_utilise:></h2>
     <ul>
     <BOUCLE_sites_lies(SELECTION_OBJETS){objet}{id_objet}{type_lien ?}{par ordre_objet,titre}>
-    [<li[(#COMPTEUR_BOUCLE|=={1}|oui) class="first"]>(#ID_OBJET|generer_modele{#OBJET,modeles_so/contenu_lie_a,#ARRAY{
+    [<li[(#COMPTEUR_BOUCLE|=={1}|oui) class="first"]>(#ID_OBJET_DEST|generer_modele{#OBJET_DEST,modeles_so/contenu_lie,#ARRAY{
         ordre,#ORDRE,
         id_selection_objet,#ID_SELECTION_OBJET,
         langue,#ENV{l},
