--- a/squelettes/content/rubrique-home.html
+++ b/squelettes/content/rubrique-home.html
@@ -9,21 +9,11 @@
         (#TEXTE)    
     </section>]
 </article>
-
 <nav class="menu rubriques">
-	<ul class="menu-items menu-liste home">
+	<ul class="menu-items menu-liste home box_menu">
     <BOUCLE_content(SELECTION_OBJETS){objet_dest=rubrique}{id_objet_dest=#ID_RUBRIQUE}{par ordre}>
-		<li class="item menu-entree[ (#COMPTEUR_BOUCLE|modulo{4}|=={0}|oui)end]">
-			<div class="white_box"></div>
-			<div class="text">
-			<BOUCLE_rubriques(RUBRIQUES) {id_rubrique=#ID_OBJET} {si #OBJET|=={rubrique}|oui} {tout} >
-				<a href="#URL_RUBRIQUE">[(#TITRE)]</a>
-			</BOUCLE_rubriques>
-			<BOUCLE_articles(ARTICLES) {id_article=#ID_OBJET} {si #OBJET|=={article}|oui} >
-				<a href="#URL_ARTICLE">[(#TITRE)]</a>
-			</BOUCLE_articles>
-			</div>
-		</li>
+        [<li class="#COMPTEUR_BOUCLE item[ (#TYPE_LIEN)] menu-entree[ (#COMPTEUR_BOUCLE|modulo{3}|=={0}|oui)end]">
+            (#ID_OBJET|generer_modele{#OBJET,modeles_so/home[_(#TYPE_LIEN)],#ARRAY{url,#URL}})</li>]
     </BOUCLE_content>
 	</ul>
 </nav>
