afficher le numéro du row

--- a/squelettes/modeles_so/home_articles_rubrique.html
+++ b/squelettes/modeles_so/home_articles_rubrique.html
@@ -1,10 +1,10 @@
 <div class="titre">
-    <a href="[(#URL|sinon{#ID_OBJET|generer_url_entite{#OBJET}})]" title="[(#TITRE|textebrut)]">#TITRE</a>
+   <a href="[(#URL|sinon{#ID_OBJET|generer_url_entite{#OBJET}})]" title="[(#TITRE|textebrut)]">#TITRE</a>
 </div>
 <B_article>
 <ul>
 <BOUCLE_article(ARTICLES){id_rubrique}{par num titre}>
-    <li class="row_"><a href="#URL_ARTICLE" title="[(#TITRE|textebrut)]">#TITRE</a></li>
+    <li class="row_#COMPTEUR_BOUCLE"><a href="#URL_ARTICLE" title="[(#TITRE|textebrut)]">#TITRE</a></li>
 </BOUCLE_article>
 </ul>
 </B_article>
