--- a/squelettes/modeles_so/home_logo.html
+++ b/squelettes/modeles_so/home_logo.html
@@ -2,8 +2,7 @@
     <a href="[(#URL|sinon{#ID_OBJET|generer_url_entite{#OBJET}})]" title="[(#TITRE|textebrut)]">#TITRE</a>
 </div>
 
-[(#LOGO_RUBRIQUE|image_passe_partout{174,130}
-            |image_recadre{172,125}
+[(#LOGO_RUBRIQUE
             |inserer_attribut{alt,[(#TITRE|attribut_html|couper{80})]})]
 
             
