--- a/squelettes/modeles_so/home_site_slider.html
+++ b/squelettes/modeles_so/home_site_slider.html
@@ -1,6 +1,4 @@
 <div class="titre">
     <a href="[(#URL|sinon{#ID_OBJET|generer_url_entite{#OBJET}})]" title="[(#TITRE|textebrut)]">#TITRE</a>
 </div>
-[<div class="text">
-    (#INTRODUCTION)
-</div>]
+[(#MODELE{sjcycle_sites}{id_sjcycle=16,width=200,height=300,lien_article=171})]
