slider et adaptation de l'accueil

--- a/squelettes/content/rubrique-home.html
+++ b/squelettes/content/rubrique-home.html
@@ -1,6 +1,6 @@
 <BOUCLE_rub(RUBRIQUES){id_rubrique}{tout}>
-<article class="content-principal">
-    <header class="cartouche invisible">
+<article class="content-principal invisible">
+    <header class="cartouche ">
         <h1 class="h1 #EDIT{titre}">#TITRE</h1>
     </header>
 </article>
