--- a/squelettes/modeles_so/home_actualites.html
+++ b/squelettes/modeles_so/home_actualites.html
@@ -1,6 +1,11 @@
 <div class="titre">
     <a href="[(#URL|sinon{#ID_OBJET|generer_url_entite{#OBJET}})]" title="[(#TITRE|textebrut)]">#TITRE</a>
 </div>
-[<div class="text">
-    (#INTRODUCTION)
-</div>]
+<B_article>
+<dl>
+<BOUCLE_article(ARTICLES){id_rubrique}{!par date}{0,1}>
+    <dt class="row_#COMPTEUR_BOUCLE"><a href="#URL_ARTICLE" title="[(#TITRE|textebrut)]">[(#TITRE|couper{20})]</a></dt>
+    <dd>#INTRODUCTION{100}</dd>
+</BOUCLE_article>
+</dl>
+</B_article>
