--- a/squelettes/content/rubrique-home.html
+++ b/squelettes/content/rubrique-home.html
@@ -6,9 +6,17 @@
 </article>
 <nav class="menu rubriques">
 	<ul class="menu-items menu-liste home box_menu">
-    <BOUCLE_content(SELECTION_OBJETS){objet_dest=rubrique}{id_objet_dest=#ID_RUBRIQUE}{par ordre}>
+    <BOUCLE_content(SELECTION_OBJETS){objet_dest=rubrique}{id_objet_dest=#ID_TRAD}{par ordre}>
+        #SET{id_objet,#ID_OBJET}
+        <BOUCLE_trad(ARTICLES){id_trad=#ID_OBJET}{si #OBJET|=={article}}{lang}>
+            #SET{id_objet,#ID_ARTICLE}
+        </BOUCLE_trad>
+        <BOUCLE_rubrique(RUBRIQUES){id_trad=#ID_OBJET}{tout}{si #OBJET|=={rubrique}}{lang}>
+            #SET{id_objet,#ID_RUBRIQUE}
+        </BOUCLE_rubrique>
+        <//B_trad>        
         [<li class="item[ (#TYPE_LIEN)] menu-entree">
-            (#ID_OBJET|generer_modele{#OBJET,modeles_so/home[_(#TYPE_LIEN)],#ARRAY{url,#URL}})</li>]
+            (#GET{id_objet}|generer_modele{#OBJET,modeles_so/home[_(#TYPE_LIEN)],#ARRAY{url,#URL}})</li>]
     </BOUCLE_content>
 	</ul>
 </nav>
