--- a/squelettes/modeles_so/home_actualites.html
+++ b/squelettes/modeles_so/home_actualites.html
@@ -3,9 +3,14 @@
 </div>
 <B_article>
 <dl>
-<BOUCLE_article(ARTICLES){id_rubrique}{!par date}{0,1}>
-    <dt class="row_#COMPTEUR_BOUCLE"><a href="#URL_ARTICLE" title="[(#TITRE|textebrut)]">[(#TITRE|couper{20})]</a></dt>
-    <dd>#INTRODUCTION{100}</dd>
+<BOUCLE_article(ARTICLES){id_rubrique}{lang}{!par date}{0,1}>
+    <dt class="row_#COMPTEUR_BOUCLE">
+        <a href="#URL_ARTICLE" title="[(#TITRE|textebrut)]">[(#TITRE|couper{15})]</a>
+        </dt>
+    <dd>
+        <a href="#URL_ARTICLE" title="[(#TITRE|textebrut)]">[(#LOGO_ARTICLE|image_reduire{75})]</a>
+        #INTRODUCTION{100}
+    </dd>
 </BOUCLE_article>
 </dl>
 </B_article>
