--- a/squelettes/modeles_so/home_articles_rubrique.html
+++ b/squelettes/modeles_so/home_articles_rubrique.html
@@ -4,7 +4,9 @@
 <B_article>
 <ul>
 <BOUCLE_article(ARTICLES){id_rubrique}{par num titre}>
-    <li class="row_#COMPTEUR_BOUCLE"><a href="#URL_ARTICLE" title="[(#TITRE|textebrut)]">#TITRE</a></li>
+    <li class="row_#COMPTEUR_BOUCLE">
+        <a href="#URL_ARTICLE" title="[(#TITRE|textebrut)]">#TITRE</a>
+    </li>
 </BOUCLE_article>
 </ul>
 </B_article>
