--- a/squelettes/inclure/contenu_lie_a.html
+++ b/squelettes/inclure/contenu_lie_a.html
@@ -3,7 +3,7 @@
     <h2><:websimple:site_utilise:></h2>
     <ul>
     <BOUCLE_sites_lies(SELECTION_OBJETS){objet}{id_objet}{type_lien ?}{par ordre_objet,titre}>
-    #SET{id_objet_dest,#ID_OBJET}
+    #SET{id_objet_dest,#ID_OBJET_DEST}
         <BOUCLE_trad(ARTICLES){id_trad=#ID_OBJET_DEST}{si #OBJET|=={article}}{lang}>
             #SET{id_objet_dest,#ID_ARTICLE}
         </BOUCLE_trad>
@@ -11,9 +11,7 @@
             #SET{id_objet_dest,#ID_RUBRIQUE}
         </BOUCLE_rubrique>
         <//B_trad>    
-    [<li[(#COMPTEUR_BOUCLE|=={1}|oui) class="first"]>(#GET{id_objet_dest}|generer_modele{#OBJET_DEST,modeles_so/contenu_lie,#ARRAY{
-        url,#URL 
-        }})</li>]
+    [<li[(#COMPTEUR_BOUCLE|=={1}|oui) class="first"]>(#GET{id_objet_dest}|generer_modele{#OBJET_DEST,modeles_so/contenu_lie,#ARRAY{url,#URL}})</li>]
     </BOUCLE_sites_lies>
     </ul>
 </section>
