--- a/squelettes/content/rubrique-realisations.html
+++ b/squelettes/content/rubrique-realisations.html
@@ -21,7 +21,7 @@
                 <INCLURE{fond=inclure/inc-portafolio_articles}{env}{id_mot}/>
             </BOUCLE_groupes>
             </B_groupes>
-                <INCLURE{fond=inclure/inc-sites}{id_rubrique}{env}>
+                <INCLURE{fond=inclure/inc-sites}{env}>
             <//B_groupes>
         </section>
 
