--- a/squelettes/inclure/contenu_lie_a.html
+++ b/squelettes/inclure/contenu_lie_a.html
@@ -4,10 +4,10 @@
     <ul>
     <BOUCLE_sites_lies(SELECTION_OBJETS){objet}{id_objet}{type_lien ?}{par ordre_objet,titre}>
     #SET{id_objet_dest,#ID_OBJET_DEST}
-        <BOUCLE_trad(ARTICLES){id_trad=#ID_OBJET_DEST}{si #OBJET|=={article}}{lang}>
+        <BOUCLE_trad(ARTICLES){id_trad=#ID_OBJET_DEST}{si #OBJET_DEST|=={article}}{lang=#ENV{lang}}>
             #SET{id_objet_dest,#ID_ARTICLE}
         </BOUCLE_trad>
-        <BOUCLE_rubrique(RUBRIQUES){id_trad=#ID_OBJET_DEST}{tout}{si #OBJET|=={rubrique}}{lang}>
+        <BOUCLE_rubrique(RUBRIQUES){id_trad=#ID_OBJET_DEST}{tout}{si #OBJET_DEST|=={rubrique}}{lang=#ENV{lang}}>
             #SET{id_objet_dest,#ID_RUBRIQUE}
         </BOUCLE_rubrique>
         <//B_trad>    
