mettrre nos photos dans le background

--- a/squelettes/inclure/head.html
+++ b/squelettes/inclure/head.html
@@ -56,6 +56,7 @@
 ]
 [<link rel="stylesheet" href="(#CSS{css/perso.css})" type="text/css" />]
 
+[<link rel="stylesheet" href="(#URL_PAGE{styles.css}|url_absolue)" type="text/css" />]
 
 [(#REM) Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons ]
 [<link rel="icon" type="image/x-icon" href="(#CHEMIN{favicon.ico})" />
