--- a/squelettes/modeles/sjcycle_sites.html
+++ b/squelettes/modeles/sjcycle_sites.html
@@ -17,7 +17,7 @@ jQuery(document).ready(function() {
 /*#EVAL{chr(93)}[(#EVAL{chr(93)})]>*/</script>
 
 <B_sites>
-   <div id="sjcycle_sites">
+   <div id="sjcycle_sites" class="sjcycle_sites">
 <BOUCLE_sites(SITES){!par date}{0,10}>
       [<div class="sjcycle_sites_img">
          <a href="#URL_RUBRIQUE">(#LOGO_SITE|
