--- a/squelettes/extra2/rubrique.html
+++ b/squelettes/extra2/rubrique.html
@@ -8,37 +8,37 @@
 	</BOUCLE_parent>
 </BOUCLE_racine>
 <B_extra2_rubrique>
-<div class="liste articles">
-    <ul class="liste-items">
+
+<BOUCLE_rub(RUBRIQUES){id_trad=3}{lang}>
+<B_articles_rubrique>
+ <ul class="menu-items menu-liste box_menu">
+    <li class="item articles_rubrique menu-entree">
+        <div class="titre">
+          <a href="#URL_RUBRIQUE" title="#TITRE">[(#TITRE|couper{50})]</a>
+        </div>
+          <ul>
+            <BOUCLE_articles_rubrique(ARTICLES){id_rubrique} {par titre} {lang}>
+            <li class="row_#COMPTEUR_BOUCLE [ (#EXPOSE)]">
+            <a href="#URL_ARTICLE" title="#TITRE">[(#TITRE|couper{45})]</a>
+        </li>
+            </BOUCLE_articles_rubrique>
+        </ul>
+    </li>  
+</ul>
+    </B_articles_rubrique>
+</BOUCLE_rub>
+
 <BOUCLE_extra2_rubrique(RUBRIQUES){id_rubrique=#GET{id_racine}}{tout}>
 #SET{compteur_boucle,#COMPTEUR_BOUCLE}
-     <B_articles_rubrique>
-    <li class="item[(#ID_RUBRIQUE|=={#ENV{id_rubrique}}|oui)on] first"><div class="square">&nbsp;</div>
-          <a href="#URL_RUBRIQUE" title="#TITRE">[(#TITRE|couper{50})]</a>
-          #SET{first,oui}
-          [(#ID_RUBRIQUE|=={#ENV{id_rubrique}}|oui)<ul>]
-        <BOUCLE_articles_rubrique(ARTICLES){id_rubrique} {par titre} {lang}>
-        [(#ID_RUBRIQUE|=={#ENV{id_rubrique}}|oui)<li class="item[ (#EXPOSE)]"><div class="square">&nbsp;</div> <a href="#URL_ARTICLE" title="#TITRE">[(#TITRE|couper{45})]</a></li>]
-        </BOUCLE_articles_rubrique>
-        [(#ID_RUBRIQUE|=={#ENV{id_rubrique}}|oui)</ul>]  
-    </li>   
-    </B_articles_rubrique>
+    <B_rubriques>
+    <ul class="menu-items submenu">
     <BOUCLE_rubriques(RUBRIQUES){id_parent}{tout}{lang}>
-    	<li class="item[ (#EXPOSE)][(#COMPTEUR_BOUCLE|=={1}|et{#GET{first}|non}|oui) first][(#COMPTEUR_BOUCLE|=={#TOTAL_BOUCLE}|oui) last]">
-    	    <div class="square">&nbsp;</div>  <a href="#URL_RUBRIQUE" title="#TITRE">[(#TITRE|couper{50})]</a>
-             <B_articles_rubrique2>
-                  <ul>
-                <BOUCLE_articles_rubrique2(ARTICLES){id_rubrique} {id_rubrique=#ENV{id_rubrique}}{par titre}{pagination}{lang}>
-                <li class="item[ (#EXPOSE)]"><div class="square">&nbsp;</div> <a href="#URL_ARTICLE" title="#TITRE">[(#TITRE|couper{45})]</a></li>
-                </BOUCLE_articles_rubrique2>
-                </ul>
-                [<p class="pagination">(#PAGINATION)</p>]
-                  <ul>
-            </B_articles_rubrique2>    	        
-    	    </li>
+    	<li class="item sub_item">
+    	    <a href="#URL_RUBRIQUE" title="#TITRE">[(#TITRE|couper{50})]</a>       
+    	 </li>
     </BOUCLE_rubriques>
-
-</BOUCLE_extra2_rubrique>
     </ul>
-</div>
+    </B_rubriques>
+</BOUCLE_extra2_rubrique>
+    
 </B_extra2_rubrique>
