--- a/squelettes/content/selection.html
+++ b/squelettes/content/selection.html
@@ -1,5 +1,10 @@
-<h1><:websimple:envoi_commande:></h1>
-
+    <header class="cartouche">
+        <h1><:websimple:envoi_commande:></h1>
+    </header>
+    [(#REM)Le panier]
+    <aside id="mon_panier" class="fenetre_container">
+       #INCLURE{fond=inclure/mon_panier,env,ajax=mon_panier,env}
+    </aside> 
 <BOUCLE_contact(CONTACTS){id_auteur=#SESSION{id_auteur}}{id_auteur>0}{0,1}>
  [(#ENV{message}|=={ok}|non)
     [<div id="abonne_coord" class="ajax">  
