--- a/squelettes/content/site.html
+++ b/squelettes/content/site.html
@@ -1,19 +1,20 @@
 <BOUCLE_content(SITES){id_syndic}>
+<article class="content-principal">
+    <header class="cartouche">
+        <a href="#URL_SITE">[(#LOGO_SITE|image_reduire{150,100})]</a>
+        <h1 class="h1 #EDIT{nom_site}">#NOM_SITE</h1>
+    </header>
+    [(#REM)Le panier]
+    <aside id="mon_panier" class="fenetre_container">
+       #INCLURE{fond=inclure/mon_panier,env,ajax=mon_panier}
+    </aside> 
+  [<section class="#EDIT{descriptif} chapo">(#DESCRIPTIF)</section>]
+  [<section class="#EDIT{url_site} hyperlien"><a href="#URL_SITE" class="spip_out">(#URL_SITE|couper{80})</a></section>]
+</article>
 <aside class="right">
     [(#REM)Les Contenus liés]
     <INCLURE{fond=inclure/contenu_lie_a,objet=site,id_objet=#ID_SYNDIC,class=last,env}/>
 </aside>
-<article class="content-principal">
-
-  <header class="cartouche">
-      <a href="#URL_SITE">[(#LOGO_SITE|image_reduire{150,100})]</a>
-      <h1 class="h1 #EDIT{nom_site}">#NOM_SITE</h1>
-  </header>
-
-  [<section class="#EDIT{descriptif} chapo">(#DESCRIPTIF)</section>]
-  [<section class="#EDIT{url_site} hyperlien"><a href="#URL_SITE" class="spip_out">(#URL_SITE|couper{80})</a></section>]
-</article>
-
 <INCLURE{fond=liste/syndicarticles,id_syndic,env,ajax} />
 
 
