--- a/squelettes/content/article-packs.html
+++ b/squelettes/content/article-packs.html
@@ -1,22 +1,21 @@
 <BOUCLE_content(ARTICLES){id_article}>
-<aside class="right">
-    [(#REM)Bouton ajouter panier]
-    <INCLURE{fond=inclure/prix,objet=article,id_objet=#ID_ARTICLE,env,expl= (<:htva:>),ajax}/>
-    [(#REM)Les Contenus liés]
-    #SET{id_article,#ID_ARTICLE}
+ #SET{id_article,#ID_ARTICLE}
     [(#ID_TRAD|>{0}|oui)#SET{id_article,#ID_TRAD}]
-    <INCLURE{fond=inclure/contenu_lie,objet_dest=article,id_objet_dest=#GET{id_article},type_lien=utilise_par_site,class=last,env}/>
-</aside>
-
-
-
 <article class="content-principal">
 	<header class="cartouche">
 		[<p class="#EDIT{surtitre} surtitre">(#SURTITRE)</p>]
 		[(#ENV{titre}|!={non}|oui)<h1 class="h1 #EDIT{titre}">#TITRE</h1>]
 		[<p class="#EDIT{soustitre} soustitre">(#SOUSTITRE)</p>]
 	</header>
+	[(#REM)Le panier]
+	<aside id="mon_panier" class="fenetre_container">
+       #INCLURE{fond=inclure/mon_panier,env,ajax=mon_panier,objet=article,id_objet=#GET{id_article},env}
+    </aside> 
 	<section class="body_content">
+	    <aside class="right">
+        [(#REM)Les Contenus liés]
+            <INCLURE{fond=inclure/contenu_lie,objet_dest=article,id_objet_dest=#GET{id_article},type_lien=utilise_par_site,class=last,env}/>
+        </aside>
     	[<section class="#EDIT{chapo} chapo surlignable">(#CHAPO|image_reduire{500,0})</section>]
     	[<section class="#EDIT{texte} texte surlignable">
     			[(#LOGO_ARTICLE|image_reduire{200,200})]
@@ -24,7 +23,7 @@
     		]
     	[<section class="#EDIT{hyperlien} hyperlien"><:voir_en_ligne:> : <a href="(#URL_SITE)" class="spip_out">[(#NOM_SITE|sinon{[(#URL_SITE|couper{80})]})]</a></section>]
     	[<section class="#EDIT{ps} ps surlignable"><h2><:info_ps:></h2>(#PS|image_reduire{500,0})</section>]
-    
+
         <section class="options_packs">
             <INCLURE{fond=inclure/options,id_objet_dest=#ID_ARTICLE,objet_dest=article,url=#URL_ARTICLE,env,ajax,id_article_base=#ID_ARTICLE}/>
         </section>
@@ -32,7 +31,7 @@
     	[(#INCLURE{fond=inclure/documents,id_article})]
     	
     	<footer>
-    		[<aside class="notes"><h2><:info_notes:></h2>(#NOTES)</aside>]
+    		[<aside class="notes"><h3><:info_notes:></h3>(#NOTES)</aside>]
     		[(#REM) inclure de partage RS ]
     		[(#REM) bloc precedent/suivant en guise de <nav></nav> ]
 	</footer>
