--- a/squelettes/content/rubrique-realisations.html
+++ b/squelettes/content/rubrique-realisations.html
@@ -3,8 +3,11 @@
         <header class="cartouche">
             <h1 class="h1 #EDIT{titre}">#TITRE</h1>
         </header>
+        [(#REM)Le panier]
+        <aside id="mon_panier" class="fenetre_container">
+           #INCLURE{fond=inclure/mon_panier,env,ajax=mon_panier,objet=article,id_objet=#GET{id_article},env}
+        </aside>         
         [<section class="#EDIT{texte} chapo">
-            [(#LOGO_RUBRIQUE|image_reduire{200,200})]
             (#TEXTE)
          </section>]
     </article>
